- fixed spacing on the contact form by adding the ".row" class in main.scss

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -320,3 +320,7 @@ button {
   color:$colorSet3;
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
